@@ -24,7 +24,11 @@
 #include <stdlib.h>
 #include <stdio.h>
 #include <string.h>
-#include <signal.h>
+/* On Windows systems signal.h is not needed and even not supported on
+   WindowsCE. */
+#ifndef HAVE_DOSISH_SYSTEM 
+# include <signal.h>
+#endif
 #include <unistd.h>
 #include <errno.h>
 #include <fcntl.h>
