@@ -20,6 +20,8 @@
 # include <config.h>
 #endif
 
+#ifndef HAVE_W32CE_SYSTEM
+
 #define setenv _assuan_setenv
 #define unsetenv _assuan_unsetenv
 #define clearenv _assuan_clearenv
@@ -352,4 +354,4 @@ weak_alias (__unsetenv, unsetenv)
 weak_alias (__clearenv, clearenv)
 #endif
 
-
+#endif /*!HAVE_W32CE_SYSTEM*/
