@@ -1,7 +1,7 @@
 Noteworthy changes in version 2.0.1 (unreleased)
 ------------------------------------------------
 
- * Under development.
+ Under development:
 
  * Support for WindowsCE.
 
